Changes of Ema Torres

--- a/index.css
+++ b/index.css
@@ -75,3 +75,9 @@ footer {
 	height: auto;
 	object-fit: cover;
 }
+
+.images-section {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 20px;
+}
